--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="안녕하세요"
+        android:id="@+id/tex"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ToggleButton
+        android:id="@+id/resultButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn"
-        />
+        android:layout_marginBottom="40dp"
+        android:text="결과값"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
