--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,9 +13,10 @@
 
         <EditText
             android:id="@+id/et_inputID"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="INPUT ID"
+            android:gravity="center"
             />
 
     </LinearLayout>
